--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,10 +18,6 @@
         "react"
     ],
     "rules": {
-        "indent": [
-            "error",
-            "tab"
-        ],
         "linebreak-style": [
             "error",
             "unix"
@@ -33,6 +29,34 @@
         "semi": [
             "error",
             "always"
+        ],
+        "comma-dangle": [
+            "error",
+            "never"
+        ],
+        "space-in-parens": [
+          "error",
+          "never"
+        ],
+        "space-before-blocks": [
+          "error",
+          "always"
+        ],
+        "space-before-function-paren": [
+          "error",
+          "always"
+        ],
+        "spaced-comment": [
+          "error",
+          "always"
+        ],
+        "brace-style": [
+          "error",
+          "1tbs"
+        ],
+        "object-curly-spacing": [
+          "error",
+          "always"
         ]
     }
 }
