--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "atom": "^1.4.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "optionator": "^0.9.1"
   },
   "devDependencies": {
     "eslint": "^8.13.0",
