--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 ATLAS_URI=mongodb+srv://rmbrown:flashlight@cluster0.yrvm5.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+THESAURUS_API_KEY='45d63208-0692-4564-9f60-e5908ca24733'
+THESAURUS_API_URI='https://www.dictionaryapi.com/api/v3/references/thesaurus/json/'
