--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha '__tests__/**' --timeout 10000"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +17,16 @@
     "express": "^4.17.2",
     "mongoose": "^6.1.8",
     "multer": "^1.4.4"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/register": "^7.18.6",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.0.0",
+    "mongodb-memory-server": "^8.7.2",
+    "supertest": "^6.2.3"
   }
 }
