--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "scripts": {
     "lint": "eslint ./",
-    "test": "jest"
+    "test": "jest",
+    "build": "cd client && npm run build",
+    "start": "cd backend && node server.js",
+    "client": "cd client && npm start",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "jest": {
     "transform": {
