Fixed package.json parsing errors

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vocabulary-augmenter",
   "version": "1.0.0",
   "description": "A website designed to enhance your english vocabulary",
-  "main:" "backend/server.js",
+  "main": "backend/server.js"
   "dependencies": {
     "atom": "^1.4.1",
     "bcryptjs": "^2.4.3",
