--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "A website designed to enhance your english vocabulary",
   "main": "backend/server.js",
+  "engines": {
+    "node": "16.15.1"
+  },
   "dependencies": {
     "atom": "^1.4.1",
     "bcryptjs": "^2.4.3",
