--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "chalk": "^5.0.1",
     "cheerio": "^1.0.0-rc.11",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
