--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "chalk": "^5.0.1",
     "eslint": "^8.17.0",
     "jsonwebtoken": "^8.5.1",
-    "optionator": "^0.9.1"
+    "optionator": "^0.9.1",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "dotenv": "^14.3.2",
+    "express": "^4.17.2",
+    "mongoose": "^6.1.8",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
